more linq intro

--- a/Queries/Queries.csproj
+++ b/Queries/Queries.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C6210F19-6EB4-4363-B484-9DE163BBBD76}</ProjectGuid>
+    <ProjectGuid>{B95160FE-429D-4F18-AE3F-8299530DB7B2}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Features</RootNamespace>
-    <AssemblyName>Features</AssemblyName>
+    <RootNamespace>Queries</RootNamespace>
+    <AssemblyName>Queries</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,8 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Employee.cs" />
-    <Compile Include="MyLinq.cs" />
+    <Compile Include="Movie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
